<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="locale">en</string>
    <string name="shortcut_collecting_toggle_short">Collect</string>
    <string name="shortcut_collecting_toggle_long">Toggle collecting</string>
    <string name="shortcut_upload_toggle_short">Upload</string>
    <string name="shortcut_upload_toggle_long">Toggle upload</string>
    <string name="shortcut_export_toggle_short">Export</string>
    <string name="shortcut_export_toggle_long">Toggle export</string>
    <string name="quicksettings_collecting_start">Start collecting</string>
    <string name="quicksettings_collecting_stop">Stop collecting</string>
    <string name="quicksettings_upload_start">Start upload</string>
    <string name="quicksettings_upload_stop">Stop upload</string>
    <string name="quicksettings_export_start">Start export</string>
    <string name="quicksettings_export_stop">Stop export</string>
    <string name="unit_length_metric">m</string>
    <string name="unit_length_imperial">ft</string>
    <string name="unit_speed_metric">km/h</string>
    <string name="unit_speed_imperial">mph</string>
    <string name="network_type_unknown">Unknown</string>
    <string name="network_group_unknown">Unknown</string>
    <string name="app_title_preferences">Preferences</string>
    <string name="dialog_want_enable_gps">Do you want open location settings to enable GPS?</string>
    <string name="dialog_could_not_open_android_settings">Could not open Android settings. Open them manually to change.</string>
    <string name="dialog_select_email_app">Select email application</string>
    <string name="dialog_what_is_new">Developer\'s message!</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_remind_later">Remind later</string>
    <string name="dialog_register">Register</string>
    <string name="dialog_enter_api_key">Enter</string>
    <string name="dialog_export">Export</string>
    <string name="dialog_upload">Upload</string>
    <string name="dialog_keep">Keep</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_share">Share</string>
    <string name="dialog_open">Open</string>
    <string name="dialog_open_single">Open (single file only)</string>
    <string name="dialog_send">Send</string>
    <string name="dialog_dont_show_again">Don\'t show this again</string>
    <string name="dialog_proceed">Proceed</string>
    <string name="dialog_settings">Settings</string>
    <string name="main_dialog_not_compatible_title">Compatibility problems</string>
    <string name="main_dialog_not_compatible_begin">The app may not work because:\n</string>
    <string name="main_dialog_no_compatible_mobile_radio_message">&#8226; Mobile network hardware not detected.\n</string>
    <string name="main_toast_background_task_already_running_collector">Collector service</string>
    <string name="main_toast_background_task_already_running_uploader">Uploader task</string>
    <string name="main_toast_background_task_already_running_export">Export task</string>
    <string name="main_toast_background_task_already_running_unknown">Background task</string>
    <string name="main_toast_background_task_already_running_common">Stop \'<xliff:g id="task_name">%s</xliff:g>\' first.</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="unknown_error">Unknown error occurred!</string>
    <string name="main_tab_last_title">Last saved</string>
    <string name="main_tab_stats_title">Statistics</string>
    <string name="main_tab_map_title">Map</string>
    <string name="main_gps_accuracy_not_available">Not available</string>
    <string name="main_signal_strength_not_available">Not available</string>
    <string name="date_time_format_standard">yyyy-MM-dd HH:mm:ss</string>
    <string name="main_gps_status_label">GPS status:</string>
    <string name="main_stats_today_title">Today</string>
    <string name="main_stats_local_title">Local since <xliff:g id="date_time">%s</xliff:g></string>
    <string name="main_stats_locations_label">Measurements:</string>
    <string name="main_stats_cells_label">Cells (discovered):</string>
    <string name="main_stats_global_title">Total since <xliff:g id="date_time">%s</xliff:g></string>
    <string name="main_stats_global_locations_label">Measurements:</string>
    <string name="main_stats_global_cells_label">Discovered cells:</string>
    <string name="main_stats_to_upload_title">To upload</string>
    <string name="main_stats_to_upload_ocid_locations_label" translatable="false">OpenCellID.org:</string>
    <string name="main_stats_to_upload_mls_locations_label" translatable="false">BeaconDB:</string>
    <string name="main_last_cell_title">Last saved measurement</string>
    <string name="main_last_number_of_cells_label">Main / neighboring:</string>
    <string name="main_last_number_of_cells_value" translatable="false"><xliff:g id="number_of_main">%1$d</xliff:g> / <xliff:g id="number_of_neighboring">%2$d</xliff:g></string>
    <string name="main_last_network_type_label">Network type:</string>
    <string name="main_last_long_cell_id_label">Long Cell ID:</string>
    <string name="main_last_cell_id_rnc_label">Cell ID / RNC:</string>
    <string name="main_last_cell_id_rnc_value" translatable="false"><xliff:g id="short_cell_id">%1$d</xliff:g> / <xliff:g id="rnc">%2$d</xliff:g></string>
    <string name="main_last_cell_id_label">Cell ID:</string>
    <string name="main_last_lac_label">LAC:</string>
    <string name="main_last_tac_label">TAC:</string>
    <string name="main_last_mcc_label">MCC:</string>
    <string name="main_last_mnc_label">MNC:</string>
    <string name="main_last_sid_label">SID:</string>
    <string name="main_last_nid_label">NID:</string>
    <string name="main_last_bid_label">BID:</string>
    <string name="main_last_signal_strength_label">Signal strength:</string>
    <string name="main_last_signal_strength_value" translatable="false"><xliff:g id="signal_strength">%d</xliff:g> dBm</string>
    <string name="main_last_latitude_label">Latitude:</string>
    <string name="main_last_latitude_value" translatable="false"><xliff:g id="latitude">%.8f&#176;</xliff:g></string>
    <string name="main_last_longitude_label">Longitude:</string>
    <string name="main_last_longitude_value" translatable="false"><xliff:g id="longitude">%.8f&#176;</xliff:g></string>
    <string name="main_last_gps_accuracy_label">Accuracy:</string>
    <string name="main_last_gps_accuracy_value" translatable="false"><xliff:g id="accuracy_value">%1$.2f</xliff:g> <xliff:g id="accuracy_unit">%2$s</xliff:g></string>
    <string name="main_last_date_time_label">Save time:</string>
    <string name="main_last_cell_no_data_message">No measurements so far, go outside and collect some data!</string>
    <string name="main_last_toast_copy_message">Value \'<xliff:g id="property_value">%s</xliff:g>\' copied to clipboard</string>
    <string name="main_map_my_location_button">Move to my location</string>
    <string name="main_map_follow_me_button">Follow my location</string>
    <string name="main_map_location_enable_button">Enable my location</string>
    <string name="main_map_location_disable_button">Disable my location</string>
    <string name="main_map_help_button">Show help</string>
    <string name="main_map_enable">Enable</string>
    <string name="main_map_disable">Disable</string>
    <string name="main_menu_start_button">Start collecting</string>
    <string name="main_menu_stop_button">Stop collecting</string>
    <string name="main_menu_upload_button">Upload</string>
    <string name="main_menu_more_button">More</string>
    <string name="main_menu_export_button">Export</string>
    <string name="main_menu_clear_button">Clear all</string>
    <string name="main_menu_help_button">Help</string>
    <string name="main_menu_preferences_button">Preferences</string>
    <string name="main_menu_network_type_button">Network type</string>
    <string name="main_menu_donate_button">Donate</string>
    <string name="collector_notification_channel_name">Collector</string>
    <string name="collector_notification_title">Collecting</string>
    <string name="collector_notification_stats">Today <xliff:g id="number_of_measurements">%1$d</xliff:g> measurements of <xliff:g id="number_of_cells">%2$d</xliff:g> cells.</string>
    <string name="collector_notification_last_measurement">Last cells:\n<xliff:g id="cell_identifier">%s</xliff:g></string>
    <string name="collector_notification_status">GPS status: <xliff:g id="status">%s</xliff:g>.</string>
    <string name="collector_gps_unavailable">Cannot start collecting because GPS is unavailable.</string>
    <string name="uploader_notification_channel_name">Uploader</string>
    <string name="uploader_notification_title">Uploading</string>
    <string name="uploader_notification_progress_info">Uploaded <xliff:g id="progress_in_percent">%d</xliff:g>%%.</string>
    <string name="uploader_result_dialog_title">Upload result</string>
    <string name="uploader_dialog_progress_title">Uploading</string>
    <string name="uploader_starting">Starting upload&#8230;</string>
    <string name="uploader_aborting">Aborting upload&#8230;</string>
    <string name="uploader_already_running">Upload is already running.</string>
    <string name="uploader_disabled">Upload disabled</string>
    <string name="uploader_disabled_description">Upload disabled for this project.</string>
    <string name="uploader_aborted">Upload aborted</string>
    <string name="uploader_aborted_description">Nothing has been uploaded.</string>
    <string name="uploader_success">Upload successful</string>
    <string name="uploader_success_description">Upload successful. Thanks for your contribution!</string>
    <string name="uploader_partially_succeeded">Partially uploaded</string>
    <string name="uploader_partially_succeeded_description">Partially uploaded mean that some data has been successfully sent before upload has been aborted. This may be caused by your request or by an error which has been encountered.</string>
    <string name="uploader_failure">Upload failed</string>
    <string name="uploader_failure_description">Upload failed due to unknown reason. Please check if you have the latest version of the app. If you encounter this problem for a long time, please let me know.</string>
    <string name="uploader_invalid_api_key">Invalid access token</string>
    <string name="uploader_invalid_api_key_description">User with the access token entered in app preferences cannot be found. Please check if entered access token is correct.</string>
    <string name="uploader_invalid_input_data">Invalid data</string>
    <string name="uploader_invalid_input_data_description">Server refused the data send by the app. Please check if you have the latest version of the app. If you encounter this problem for a long time, please let me know.</string>
    <string name="uploader_no_data">Nothing to upload</string>
    <string name="uploader_no_data_description">There is no data to upload. Please collect some measurements before uploading.</string>
    <string name="preferences_category_settings_title">Settings</string>
    <string name="preferences_category_help_title">Help</string>
    <string name="preferences_mls_enabled_title">Enable BeaconDB upload</string>
    <string name="preferences_mls_enabled_on_summary">Measurements will be uploaded to BeaconDB.</string>
    <string name="preferences_mls_enabled_off_summary">Measurements will not be uploaded to BeaconDB.</string>
    <string name="preferences_about_mls_project_title">About BeaconDB</string>
    <string name="preferences_about_mls_project_summary">Information about BeaconDB.</string>
</resources>